# baw

./: ..code-workspace  .baw  .code-workspace  .gitignore  BUGS.md  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README  README.md  TODO.md  alias.sh  baw.code-workspace  make  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.dev  requirements.txt  setup.cfg  setup.py
.baw/: project.cfg  project.config
.github/: dependabot.yml
.github/workflows/: dependabot.yml  docker.yml  publish.yml  pypi.yml  release.yml  test.yml
baw/: __init__.py  __main__.py  __patch__.py  __root__.py  changelog.py  cli.py  command.py  config.py  datetime.py  dockers.py  execution.py  git.py  gix.py  jenkins.py  pipefile.py  pipelinefile.py  requirements.py  resources.py  run.py  runtime.py  utils.py  virtual.py
baw/archive/: test.py
baw/cmd/: __init__.py  baseline.py  bisect.py  clean.py  complex.py  cov.py  doc.py  format.py  generate.py  ide.py  image.py  info.py  init.py  install.py  lint.py  open.py  pipe.py  pipeline.py  plan.py  publish.py  rebase.py  refactor.py  release.py  sh.py  sync.py  test.py  upgrade.py  utils.py
baw/config/: __init__.py  change.py
baw/dockers/: __init__.py  container.py  dockfile.py  image.py
baw/project/: __init__.py  version.py
baw/requirements/: __init__.py  check.py  parser.py  upgrade.py
baw/requires/: requirements-dev.txt  requirements-doc.txt
baw/small/: cprofile.py  profile.py  regen.py  single.py  version.py
baw/sync/: dev  doc
baw/templates/: ..code-workspace  .code-workspace  .coveragerc  .gitignore  .isort.cfg  .rcfile  Dockerfile  Jenkinsfile  Makefile  conf.py  conftest.tpy  dockerfile  pyproject  pytest.ini  refactor  semantic.cfg  setup.cfg  setup.tpy
docs/: backlog.rst  bugs.rst  index.rst  todo.rst
docs/releases/: 0.10.0.rst  0.11.0.rst  backlog.rst  releases.rst
env/: Baseline  PreRelease  Rebase  Release  alias.sh  base  baseline_run  make  prerelease_run  rebase_run  release_run  run  test  test_run
env/base/: Dockerfile
env/python/: Dockerfile
env/test/: Dockerfile
templates/: ..code-workspace  .code-workspace  .coveragerc  .gitignore  .isort.cfg  .rcfile  __init__.py  conf.py  pytest.ini  setup.cfg  setup.py  setup.tpy
templates/docs/: plan.rst
tests/: __init__.py  conftest.py  test_archive.py  test_baseline.py  test_clean.py  test_cli.py  test_command.py  test_config.py  test_cov.py  test_doc.py  test_docker.py  test_format.py  test_git.py  test_ide.py  test_image.py  test_info.py  test_init.py  test_linter.py  test_main.py  test_pipeline.py  test_plan.py  test_refactor.py  test_release.py  test_requirements.py  test_resources.py  test_sh.py  test_sync.py  test_test.py  test_upgrade.py  test_virtual.py
tests/data/: .baw
tests/fixtures/: project.py  requirements.py
tests/small/: test_profile.py  test_single.py
(+15 files in other folders)
